Add some headings

--- a/pengenalan_pola_Studi_Kasus_Pima_Indians_Diabetes.ipynb
+++ b/pengenalan_pola_Studi_Kasus_Pima_Indians_Diabetes.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "pengenalan pola_Studi_Kasus_Pima_Indians_Diabetes.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "YVfSksXrJYts",
@@ -13,6 +12,7 @@
         "l9tbblNJLvKX",
         "xVsqeh6yMFgU"
       ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/LinggarM/Pima-Indians-Diabetes-Classification-using-Various-Supervised-Algorithms/blob/main/pengenalan_pola_Studi_Kasus_Pima_Indians_Diabetes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Preparation"
+      ],
+      "metadata": {
+        "id": "3dQQnbaRQyuu"
+      }
     },
     {
       "cell_type": "code",
@@ -71,6 +80,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Exploration"
+      ],
+      "metadata": {
+        "id": "pDhmvM4uQ1_a"
+      }
     },
     {
       "cell_type": "code",
@@ -412,6 +430,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Preprocessing"
+      ],
+      "metadata": {
+        "id": "yJqqaeQDQ95n"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "fsARVsknBslP"
@@ -419,7 +446,7 @@
       "source": [
         "# memisahkan atribut fitur (selain target/ kelas prediksi)\n",
         "x = df_diabetes[df_diabetes.columns[:8]]\n",
-        " \n",
+        "\n",
         "# memisahkan target/ kelas prediksi (0 dan 1)\n",
         "y = df_diabetes['Outcome']"
       ],
@@ -652,6 +679,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Splitting"
+      ],
+      "metadata": {
+        "id": "Hp5HC-1BQ_dj"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Fe6NvS5yCetH"
@@ -664,6 +700,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training Preparation"
+      ],
+      "metadata": {
+        "id": "ZeZhX4uORBAT"
+      }
     },
     {
       "cell_type": "code",
@@ -691,7 +736,7 @@
       "source": [
         "parameters = {'bootstrap': True,\n",
         "              'min_samples_leaf': 3,\n",
-        "              'n_estimators': 50, \n",
+        "              'n_estimators': 50,\n",
         "              'min_samples_split': 10,\n",
         "              'max_features': 'sqrt',\n",
         "              'max_depth': 6,\n",
@@ -824,7 +869,7 @@
         "id": "lNxKZucQJjJy"
       },
       "source": [
-        "checkpoint_name = 'BestWeights.hdf5' \n",
+        "checkpoint_name = 'BestWeights.hdf5'\n",
         "checkpoint = ModelCheckpoint(checkpoint_name, monitor='val_accuracy', verbose = 1, save_best_only = True, mode ='max')\n",
         "callbacks_list = [checkpoint]"
       ],
@@ -1462,7 +1507,7 @@
       },
       "source": [
         "# Load wights file of the best model :\n",
-        "wights_file = './BestWeights.hdf5' # choose the best checkpoint \n",
+        "wights_file = './BestWeights.hdf5' # choose the best checkpoint\n",
         "NN_model.load_weights(wights_file) # load weights\n",
         "NN_model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
       ],
@@ -1538,7 +1583,7 @@
         "# models\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.svm import SVC\n",
-        "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, ExtraTreesClassifier \n",
+        "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, ExtraTreesClassifier\n",
         "from sklearn.ensemble import BaggingClassifier, AdaBoostClassifier\n",
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -1572,7 +1617,7 @@
         "          \"Random Forest Classifier\",\n",
         "         ]\n",
         "classifiers = [\n",
-        "    NN_model,           \n",
+        "    NN_model,\n",
         "    LogisticRegression(),\n",
         "    SVC(),\n",
         "    GradientBoostingClassifier(),\n",
@@ -1604,7 +1649,7 @@
         "# untuk menghapus warning\n",
         "warnings.filterwarnings('ignore')\n",
         "\n",
-        "# fungsi accuracy testing \n",
+        "# fungsi accuracy testing\n",
         "def acc_summary(model, train_X, train_y, val_X, val_y):\n",
         "    t0 = time()\n",
         "    model.fit(train_X, train_y)\n",
@@ -1809,7 +1854,7 @@
         "id": "7T3PAj9tLw_g"
       },
       "source": [
-        "# get best models [-1] is random forest and next [0] is index to model to get feature importance, and zipped with X column  \n",
+        "# get best models [-1] is random forest and next [0] is index to model to get feature importance, and zipped with X column\n",
         "importances = sorted([(a,b) for a,b in zip(result[-1][0].feature_importances_, x_df_transformed.columns)],reverse=True)\n",
         "n = [ni for si,ni in importances]\n",
         "s = [si for si,ni in importances]"
@@ -1874,7 +1919,7 @@
       "source": [
         "# Install and Import Dependencies\n",
         "!pip install vecstack\n",
-        "from vecstack import stacking "
+        "from vecstack import stacking"
       ],
       "execution_count": null,
       "outputs": [
@@ -2021,7 +2066,7 @@
         "outputId": "50f38a09-7164-422a-b3b2-4ce3f0bd1964"
       },
       "source": [
-        "## Print vecstack result \n",
+        "## Print vecstack result\n",
         "accuracy = accuracy_score(y_test, y_test_pred)*100\n",
         "print(\"Stacking accuracy : {0:.2f}%\".format(accuracy))\n",
         "print(\"train and test time: {0:.2f}s\".format(train_test_time))"
