Add some headings

--- a/pengenalan_pola_Studi_Kasus_Pima_Indians_Diabetes_tanpa_standarisasi.ipynb
+++ b/pengenalan_pola_Studi_Kasus_Pima_Indians_Diabetes_tanpa_standarisasi.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "pengenalan pola_Studi Kasus Pima Indians Diabetes_tanpa_standarisasi.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "YVfSksXrJYts",
@@ -14,7 +13,7 @@
         "xVsqeh6yMFgU"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPQoFAttwda2G9z86HS9gX1",
+      "authorship_tag": "ABX9TyOo1JDhKuVwSW5XWN7wux0f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +34,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/LinggarM/Pima-Indians-Diabetes-Classification-using-Various-Supervised-Algorithms/blob/main/pengenalan_pola_Studi_Kasus_Pima_Indians_Diabetes_tanpa_standarisasi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Preparation"
+      ],
+      "metadata": {
+        "id": "VbZey5ahQN3H"
+      }
     },
     {
       "cell_type": "code",
@@ -73,6 +81,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Exploration"
+      ],
+      "metadata": {
+        "id": "MASxjrmSQTbA"
+      }
     },
     {
       "cell_type": "code",
@@ -457,6 +474,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Preprocessing"
+      ],
+      "metadata": {
+        "id": "mAfCsz4tQY0c"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "fsARVsknBslP"
@@ -464,7 +490,7 @@
       "source": [
         "# memisahkan atribut fitur (selain target/ kelas prediksi)\n",
         "x = df_diabetes[df_diabetes.columns[:8]]\n",
-        " \n",
+        "\n",
         "# memisahkan target/ kelas prediksi (0 dan 1)\n",
         "y = df_diabetes['Outcome']"
       ],
@@ -670,6 +696,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Splitting"
+      ],
+      "metadata": {
+        "id": "JcROk_38Qcnd"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Fe6NvS5yCetH"
@@ -682,6 +717,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training Preparation"
+      ],
+      "metadata": {
+        "id": "tyQdL1FxQhls"
+      }
     },
     {
       "cell_type": "code",
@@ -709,7 +753,7 @@
       "source": [
         "parameters = {'bootstrap': True,\n",
         "              'min_samples_leaf': 3,\n",
-        "              'n_estimators': 50, \n",
+        "              'n_estimators': 50,\n",
         "              'min_samples_split': 10,\n",
         "              'max_features': 'sqrt',\n",
         "              'max_depth': 6,\n",
@@ -842,7 +886,7 @@
         "id": "lNxKZucQJjJy"
       },
       "source": [
-        "checkpoint_name = 'BestWeights.hdf5' \n",
+        "checkpoint_name = 'BestWeights.hdf5'\n",
         "checkpoint = ModelCheckpoint(checkpoint_name, monitor='val_accuracy', verbose = 1, save_best_only = True, mode ='max')\n",
         "callbacks_list = [checkpoint]"
       ],
@@ -1480,7 +1524,7 @@
       },
       "source": [
         "# Load wights file of the best model :\n",
-        "wights_file = './BestWeights.hdf5' # choose the best checkpoint \n",
+        "wights_file = './BestWeights.hdf5' # choose the best checkpoint\n",
         "NN_model.load_weights(wights_file) # load weights\n",
         "NN_model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
       ],
@@ -1556,7 +1600,7 @@
         "# models\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.svm import SVC\n",
-        "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, ExtraTreesClassifier \n",
+        "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, ExtraTreesClassifier\n",
         "from sklearn.ensemble import BaggingClassifier, AdaBoostClassifier\n",
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -1590,7 +1634,7 @@
         "          \"Random Forest Classifier\",\n",
         "         ]\n",
         "classifiers = [\n",
-        "    NN_model,           \n",
+        "    NN_model,\n",
         "    LogisticRegression(),\n",
         "    SVC(),\n",
         "    GradientBoostingClassifier(),\n",
@@ -1622,7 +1666,7 @@
         "# untuk menghapus warning\n",
         "warnings.filterwarnings('ignore')\n",
         "\n",
-        "# fungsi accuracy testing \n",
+        "# fungsi accuracy testing\n",
         "def acc_summary(model, train_X, train_y, val_X, val_y):\n",
         "    t0 = time()\n",
         "    model.fit(train_X, train_y)\n",
@@ -1831,7 +1875,7 @@
         "id": "7T3PAj9tLw_g"
       },
       "source": [
-        "# get best models [-1] is random forest and next [0] is index to model to get feature importance, and zipped with X column  \n",
+        "# get best models [-1] is random forest and next [0] is index to model to get feature importance, and zipped with X column\n",
         "importances = sorted([(a,b) for a,b in zip(result[-1][0].feature_importances_, x.columns)],reverse=True)\n",
         "n = [ni for si,ni in importances]\n",
         "s = [si for si,ni in importances]"
@@ -1896,7 +1940,7 @@
       "source": [
         "# Install and Import Dependencies\n",
         "!pip install vecstack\n",
-        "from vecstack import stacking "
+        "from vecstack import stacking"
       ],
       "execution_count": null,
       "outputs": [
@@ -2042,7 +2086,7 @@
         "outputId": "8df7afb4-20b7-4b02-adbf-2d183da16fb1"
       },
       "source": [
-        "## Print vecstack result \n",
+        "## Print vecstack result\n",
         "accuracy = accuracy_score(y_test, y_test_pred)*100\n",
         "print(\"Stacking accuracy : {0:.2f}%\".format(accuracy))\n",
         "print(\"train and test time: {0:.2f}s\".format(train_test_time))"
